Fix regression of webview loadstart events firing for same page navigations.

This regressed in r425073 since DidStartProvisionalLoadForFrame didn't fire for same page navigations while DidStartNavigation does.

BUG=680863

Review-Url: https://codereview.chromium.org/2647933002
Cr-Commit-Position: refs/heads/master@{#445150}

Former-commit-id: 840012cf9996d156f6e3286a37ca0c9d5d502edc